--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 @import "~normalize.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;600&display=swap');
 @import "_variables";
 @import "modules/hello.scss";
 
@@ -10,4 +10,47 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  font-family: 'Teko', sans-serif;
+}
+
+.title {
+  color: black;
+}
+
+.mainpage {
+  max-width: 600px;
+  text-align: center;
+}
+
+.main__text {
+  width: 600px;
+  height: 300px;
+  padding: 15px;
+  font-size: 20px;
+  border: 2px solid black;
+  border-radius: 20px;
+  background-color: #ddd;
+
+}
+
+.button {
+  width: 100px;
+  line-height: 50px;
+  font-size: 26px;
+  margin-top: 30px;
+  margin-right: 30px;
+  border: 2px solid black;
+  border-radius: 10px;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &__load {
+    background-color: rgb(73, 211, 38);
+  }
+
+  &__save {
+    background-color: rgb(13, 72, 107);
+  }
 }
